--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "graphql-yoga": "^1.18.3"
+  },
+  "devDependencies": {
+    "prisma": "^1.34.10"
+  },
+  "scripts": {
+    "prisma": "prisma"
   }
 }
