--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Sato Junichi <22004610+sato11@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "prisma": "^1.34.10"
